--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
             <artifactId>core</artifactId>
             <version>3.3.0</version>
         </dependency>
+
         <dependency>
             <groupId>com.google.zxing</groupId>
             <artifactId>javase</artifactId>
@@ -45,7 +46,6 @@
             <scope>provided</scope>
         </dependency>
 
-
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
@@ -59,7 +59,11 @@
             <version>1.6.1</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.passay</groupId>
+            <artifactId>passay</artifactId>
+            <version>1.6.4</version>
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
         <dependency>
